--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
-    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "simple-react-google-maps": "^1.1.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,11 +37,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "react-dotenv": {
-    "whitelist": [
-      "KEY_MAP"
     ]
   }
 }
